variables.Variables.scala.error
Compilation error:
Variables:17: error: ')' expected but '}' found.
	}
        ^